Bug 1456522 - Stop making the tabs toolbar transparent when there's no title bar behind it, i.e. in fullscreen mode. r=stransky
MozReview-Commit-ID: DuKPGXKqtnD

UltraBlame original commit: a2d670a8074e2c93beb71fd90a0cd829d041bbb9

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -3783,6 +3783,30 @@ root
 [
 tabsintitlebar
 ]
+>
+#
+titlebar
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+titlebar
+-
+maximized
+;
+}
+:
+root
+[
+tabsintitlebar
+]
 [
 sizemode
 =
@@ -3805,37 +3829,6 @@ moz
 window
 -
 titlebar
-;
-}
-:
-root
-[
-tabsintitlebar
-]
-[
-sizemode
-=
-"
-maximized
-"
-]
->
-#
-titlebar
-{
--
-moz
--
-appearance
-:
--
-moz
--
-window
--
-titlebar
--
-maximized
 ;
 }
 :
@@ -4041,6 +4034,34 @@ tabbar
 root
 [
 tabsintitlebar
+]
+[
+sizemode
+=
+"
+normal
+"
+]
+:
+not
+(
+[
+inFullscreen
+]
+)
+#
+TabsToolbar
+:
+root
+[
+tabsintitlebar
+]
+[
+sizemode
+=
+"
+maximized
+"
 ]
 #
 TabsToolbar
